--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <div class="nav-menu">
                             <ul class="d-flex  gap-4 text-right m-0 p-0">
                                 <li>
-                                    <a href="./index.html" class="active">HOME</a>
+                                    <a href="./index.html" class="d9">HOME</a>
                                 </li>
                                 <li>
                                     <a href="javascript:void(0)">PAGES</a>
@@ -966,7 +966,7 @@
     <div class="full p-5">
         <ul class=" list ">
             <li class=" nav-link   al-line">
-                <a class="al-line m-0 text-body-light line d-block active" href="javascript:void(0)">HOME</a>
+                <a class="al-line m-0 text-body-light line d-block d9" href="javascript:void(0)">HOME</a>
             </li>
             <li class=" nav-link pt-4">
                 <a class="m-0 text-body-light  line d-block  tap" href="javascript:void(0)">PAGES</a>
